Move snd improve update team squad script to demonio controller

--- a/application/config.ini
+++ b/application/config.ini
@@ -128,6 +128,7 @@ path.log.seasonsevents = /home/goalface/public_html/staging/log/seasonsevents.lo
 path.log.matchandevents = /home/goalface/public_html/staging/log/matchandevents.log
 path.log.playeractivities = /home/goalface/public_html/staging/log/playeractivities.log
 path.log.playerstats 	= /home/goalface/public_html/staging/log/playerstats.log
+path.log.updatesquad = /home/goalface/public_html/staging/log/updatesquad.log
 
 path.templates.email = /home/goalface/public_html/staging/templates/
 path.pagination.numberitems = 20
