--- a/application/config.ini
+++ b/application/config.ini
@@ -1,3 +1,50 @@
+[general_mac]
+
+server.host = local
+server.os = osx
+
+db.adapter = PDO_MYSQL
+db.config.host = localhost
+db.config.username = root
+db.config.password = root
+db.config.dbname = goalface_beta
+
+dbspocosy.adapter = PDO_MYSQL
+dbspocosy.config.host = localhost
+dbspocosy.config.username = root
+dbspocosy.config.password = root
+dbspocosy.config.dbname = spocosy
+
+path.search.index = /Users/kokus/Sites/GoalFace/search/index/
+photo.paths.data = /Users/kokus/Sites/GoalFace/public/images/
+path.images.complogos = /Users/kokus/Sites/GoalFace/public/images/competitionlogos/
+path.images.teamlogos = /Users/kokus/Sites/GoalFace/public/images/teamlogos/
+path.images.players = /Users/kokus/Sites/GoalFace/public/images/players/
+path.images.photos = /Users/kokus/Sites/GoalFace/public/images/gallery/
+path.images.fanphotos = /Users/kokus/Sites/GoalFace/public/images/photos/
+path.index.creator.directory = /Users/kokus/Sites/GoalFace/application/sitemaps/
+path.index.server.name = localhost
+
+path.crop = /public/images
+
+path.cache = /Users/kokus/Sites/GoalFace/cache/
+path.logfile = /Users/kokus/Sites/GoalFace/log/goalface.log
+
+
+path.templates.email = /Users/kokus/Sites/GoalFace/templates/
+
+path.pagination.numberitems = 20
+email.confirmation.from = community@goalface.com
+captcha.public.key  = 6Lf_PQgAAAAAAFThhRCNiDuPXvuYb6PPs4tShrlL
+captcha.private.key = 6Lf_PQgAAAAAAPjKyBPQWx2TjwMK8vcCNB0qYlEO
+path.standings.xml = /Users/kokus/Sites/GoalFace/public/feed/standings
+time.offset.daylight = +2.0
+
+facebook.appid = 127386797328067
+facebook.secret = e12fd7c7a78dbf1928c41e0d6efaa83f
+facebook.permissions = 'email,user_birthday,user_location'
+
+
 [staging]
 
 server.host = staging
