settings added for local dev vagrant centos

--- a/application/config.ini
+++ b/application/config.ini
@@ -5,9 +5,9 @@ server.os = osx
 
 db.adapter = PDO_MYSQL
 db.config.host = localhost
-db.config.username = goalface_user
-db.config.password = Pa55w0rd
-db.config.dbname = goalface
+db.config.username = root
+db.config.password = 
+db.config.dbname = goalface_beta
 
 dbspocosy.adapter = PDO_MYSQL
 dbspocosy.config.host = localhost
@@ -15,34 +15,40 @@ dbspocosy.config.username = root
 dbspocosy.config.password = root
 dbspocosy.config.dbname = spocosy
 
-path.search.index = /var/www/goalfaceapp/search/index/
-photo.paths.data = /var/www/goalfaceapp/public/images/
-path.images.complogos = /var/www/goalfaceapp/public/images/competitionlogos/
-path.images.teamlogos = /var/www/goalfaceapp/public/images/teamlogos/
-path.images.players = /var/www/goalfaceapp/public/images/players/
-path.images.photos = /var/www/goalfaceapp/public/images/gallery/
-path.images.fanphotos = /var/www/goalfaceapp/public/images/photos/
-path.index.creator.directory = /var/www/goalfaceapp/application/sitemaps/
-path.index.server.name = localhost
+path.search.index = /www/goalfaceapp/search/index/
+photo.paths.data = /www/goalfaceapp/public/images/
+path.images.complogos = /www/goalfaceapp/public/images/competitionlogos/
+path.images.teamlogos = /www/goalfaceapp/public/images/teamlogos/
+path.images.players = /www/goalfaceapp/public/images/players/
+path.images.photos = /www/goalfaceapp/public/images/gallery/
+path.images.fanphotos = /www/goalfaceapp/public/images/photos/
+path.index.creator.directory = /www/goalfaceapp/application/sitemaps/
+path.index.server.name = gfapp.local
 
 path.crop = /public/images
 
-path.cache = /var/www/goalfaceapp/cache/
-path.logfile = /var/www/goalfaceapp/log/goalface.log
+path.cache = /www/goalfaceapp/cache/
+path.logfile = /www/goalfaceapp/log/goalface.log
 
 
-path.templates.email = /var/www/goalfaceapp/templates/
+path.templates.email = /www/goalfaceapp/templates/
 
 path.pagination.numberitems = 20
 email.confirmation.from = community@goalface.com
 captcha.public.key  = 6Lf_PQgAAAAAAFThhRCNiDuPXvuYb6PPs4tShrlL
 captcha.private.key = 6Lf_PQgAAAAAAPjKyBPQWx2TjwMK8vcCNB0qYlEO
-path.standings.xml = /var/www/goalfaceapp/public/feed/standings
+path.standings.xml = /www/goalfaceapp/public/feed/standings
 time.offset.daylight = +2.0
 
 facebook.appid = 127386797328067
 facebook.secret = e12fd7c7a78dbf1928c41e0d6efaa83f
 facebook.permissions = 'email,user_birthday,user_location'
+
+languages.en = en
+languages.es = es
+languages.it = it
+languages.pt = pt
+languages.fr = fr
 
 
 [staging]
